fixtures/invalid/module-boundary-transitive/src/features/tasks/server/secret.ts
export interface ServerSecret {
  readonly value: string;
}
